fix(ui): fix bottom nav overlap on iOS by adding safe-area padding
#5563

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,7 +26,7 @@
 .has-mobile-bottom-nav {
   @include mq(xs, max) {
     .main-content {
-      padding-bottom: var(--bottom-nav-height);
+      padding-bottom: calc(var(--bottom-nav-height) + env(safe-area-inset-bottom));
     }
   }
 }
